--- a/module/Frontend/view/v1/layout/footer.phtml
+++ b/module/Frontend/view/v1/layout/footer.phtml
@@ -23,7 +23,7 @@
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <div class="widget">
-                        <h4>VỀ CHOTOTQUYNHON.COM</h4>
+                        <h4>VỀ BESTQUYNHON.COM</h4>
                         <a href="#"><i class="fa fa-arrow-right"></i> Giới thiệu về Bestquynhon.com</a><br/>
                         <a href="#"><i class="fa fa-arrow-right"></i> Hotline : 0979 57 57 93</a> (Tâm đẹp trai)<br/>
                         <a href="#"><i class="fa fa-arrow-right"></i> Hợp tác & liên kết</a><br/>
