--- a/module/Frontend/view/v1/layout/footer.phtml
+++ b/module/Frontend/view/v1/layout/footer.phtml
@@ -34,7 +34,7 @@
                     <div class="widget">
                         <h4>THÔNG TIN LIÊN HỆ</h4>
                         <a href="#"><i class="fa fa-envelope-o"></i> <?php echo My\General::EMAIL_SUPPORT; ?></a><br/>
-                        <a rel="nofollow" href="ymsgr:sendIM?chototquynhon&amp;m=Xin chào Chototquynhon :"><image src="<?php echo STATIC_URL; ?>/f/v1/images/Yahoo-Messenger-alt-icon.png" style="width: 20px;margin-left: -3px;"/> Chototquynhon.com</a><br/>
+                        <a rel="nofollow" href="ymsgr:sendIM?chototquynhon&amp;m=Xin chào Chototquynhon :"><image src="<?php echo STATIC_URL; ?>/f/v1/images/Yahoo-Messenger-alt-icon.png" style="width: 20px;margin-left: -3px;"/> Bestquynhon.com</a><br/>
                         <a rel="nofollow" href="skype:ngocchien01?chat"><i class="fa fa-skype"></i> Bestquynhon.com</a><br/>
                     </div>
                 </div>
