--- a/module/Frontend/view/v1/layout/footer.phtml
+++ b/module/Frontend/view/v1/layout/footer.phtml
@@ -26,16 +26,21 @@
                         <h4>VỀ BESTQUYNHON.COM</h4>
                         <a href="#"><i class="fa fa-arrow-right"></i> Giới thiệu về Bestquynhon.com</a><br/>
                         <a href="#"><i class="fa fa-arrow-right"></i> Hotline : 0979 57 57 93</a> (Tâm đẹp trai)<br/>
+                        <a href="#"><i class="fa fa-envelope-o"></i> <?php echo My\General::EMAIL_SUPPORT; ?></a><br/>
+                        <a rel="nofollow" href="skype:ngocchien01?chat"><i class="fa fa-skype"></i> Bestquynhon.com</a><br/>
                         <a href="#"><i class="fa fa-arrow-right"></i> Hợp tác & liên kết</a><br/>
-                        <a href="#"><i class="fa fa-arrow-right"></i> Chính sách bảo mật</a><br/>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <div class="widget">
-                        <h4>THÔNG TIN LIÊN HỆ</h4>
-                        <a href="#"><i class="fa fa-envelope-o"></i> <?php echo My\General::EMAIL_SUPPORT; ?></a><br/>
-                        <a rel="nofollow" href="ymsgr:sendIM?chototquynhon&amp;m=Xin chào Chototquynhon :"><image src="<?php echo STATIC_URL; ?>/f/v1/images/Yahoo-Messenger-alt-icon.png" style="width: 20px;margin-left: -3px;"/> Bestquynhon.com</a><br/>
-                        <a rel="nofollow" href="skype:ngocchien01?chat"><i class="fa fa-skype"></i> Bestquynhon.com</a><br/>
+                        <h4>FACEBOOK BESTQUYNHƠN</h4>
+                        <div class="fb-page" 
+                             data-href="https://www.facebook.com/Bestquynhon-1116653795067333/"
+                             data-width="300" 
+                             data-hide-cover="false" 
+                             data-show-facepile="true"
+                            data-show-posts="false">
+                        </div>
                     </div>
                 </div>
             </div>
