--- a/module/Frontend/view/v1/layout/layout.phtml
+++ b/module/Frontend/view/v1/layout/layout.phtml
@@ -86,7 +86,7 @@ $strTemplate = current($this->layout()->getChildren())->getTemplate();
                 </div>
             </div>
         </div>-->
-        <div id="fb-root"></div>
+        <!--<div id="fb-root"></div>-->
         <div id="loading-mask" style="left: -2px; top: 0px; width: 100%; height: 100%; display: none;">
             <p id="loading_mask_loader" class="loader">
                 <img alt="Loading..." src="<?php echo STATIC_URL . '/f/v1/images/ajax-loader-tr.gif'; ?>">
