--- a/module/Frontend/view/v1/layout/layout.phtml
+++ b/module/Frontend/view/v1/layout/layout.phtml
@@ -52,7 +52,7 @@ $strTemplate = current($this->layout()->getChildren())->getTemplate();
             }
         </script>
 
-<!--        <script>
+        <script>
             window.fbAsyncInit = function () {
                 FB.init({
                     appId: '272925143041233',
@@ -71,7 +71,7 @@ $strTemplate = current($this->layout()->getChildren())->getTemplate();
                 js.src = "//connect.facebook.net/en_US/sdk.js";
                 fjs.parentNode.insertBefore(js, fjs);
             }(document, 'script', 'facebook-jssdk'));
-        </script>
+        </script><!--
         <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>-->
     </head>
 
