--- a/module/Frontend/view/v1/layout/footer.phtml
+++ b/module/Frontend/view/v1/layout/footer.phtml
@@ -34,12 +34,15 @@
                 <div class="col-md-3 col-sm-6">
                     <div class="widget">
                         <h4>FACEBOOK BESTQUYNHƠN</h4>
+                        
                         <div class="fb-page" 
                              data-href="https://www.facebook.com/Bestquynhon-1116653795067333/"
                              data-width="300" 
                              data-hide-cover="false" 
                              data-show-facepile="true"
-                            data-show-posts="false">
+                             data-show-posts="false"
+                             data-show-facepile="true"
+                             >
                         </div>
                     </div>
                 </div>
