--- a/module/Frontend/view/v1/layout/layout.phtml
+++ b/module/Frontend/view/v1/layout/layout.phtml
@@ -68,7 +68,7 @@ $strTemplate = current($this->layout()->getChildren())->getTemplate();
                 }
                 js = d.createElement(s);
                 js.id = id;
-                js.src = "//connect.facebook.net/en_US/sdk.js";
+                js.src = "//connect.facebook.net/vi_VN/sdk.js";
                 fjs.parentNode.insertBefore(js, fjs);
             }(document, 'script', 'facebook-jssdk'));
         </script><!--
