--- a/module/Frontend/view/v1/layout/footer.phtml
+++ b/module/Frontend/view/v1/layout/footer.phtml
@@ -33,8 +33,7 @@
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <div class="widget">
-                        <h4>FACEBOOK BESTQUYNHƠN</h4>
-
+                        <h4>BESTQUYNHƠN FACEBOOK</h4>
                         <div class="fb-page" 
                              data-href="https://www.facebook.com/Bestquynhon-1116653795067333/"
                              data-width="300" 
