--- a/module/Frontend/view/v1/frontend/index/index.phtml
+++ b/module/Frontend/view/v1/frontend/index/index.phtml
@@ -59,7 +59,7 @@
                                                         <a href="javascript:;" style="text-decoration: none; color: #A94464"><b><?php echo $this->arrPropertiesList[$arrContent['prop_id']]['prop_name']; ?></b></a>
                                                     </td>
                                                     <td class="text-center" style="vertical-align: middle">
-                                                        <?php echo My\General::formatDateString($arrContent['created_date']); ?>
+                                                        <?php echo My\General::formatDateString($arrContent['updated_date']); ?>
                                                     </td>
                                                 </tr>
                                             <?php endforeach; ?>
