--- a/module/Frontend/view/v1/frontend/content/detail.phtml
+++ b/module/Frontend/view/v1/frontend/content/detail.phtml
@@ -408,6 +408,9 @@ if (empty($this->arrContent['user_created'])):
                         <p style="color: blue">Bạn có thể nhắn tin theo cú pháp : </p> 
                         <p><b style="color: red">QN247 SVIP RV<?php echo sprintf("%04d", $this->arrContent['cont_id']); ?></b> gửi <b style="color: red">7650</b> để mua <b style="color: red">2 </b> ngày <img src="<?php echo STATIC_URL . '/f/v1/images/s-vip.gif'; ?>"> cho tin</p>
                         <p><b style="color: red">QN247 SVIP RV<?php echo sprintf("%04d", $this->arrContent['cont_id']); ?></b> gửi <b style="color: red">7750</b> để mua <b style="color: red">3</b> ngày <img src="<?php echo STATIC_URL . '/f/v1/images/s-vip.gif'; ?>"> cho tin</p>
+                        <p style="color: blue">Hoặc nhắn tin theo cú pháp : </p> 
+                        <p><b style="color: red">QN247 VIP RV<?php echo sprintf("%04d", $this->arrContent['cont_id']); ?></b> gửi <b style="color: red">7650</b> để mua <b style="color: red">5 </b> ngày <img src="<?php echo STATIC_URL . '/f/v1/images/vip2.gif' ?>"> cho tin</p>
+                        <p><b style="color: red">QN247 VIP RV<?php echo sprintf("%04d", $this->arrContent['cont_id']); ?></b> gửi <b style="color: red">7750</b> để mua <b style="color: red">8</b> ngày <img src="<?php echo STATIC_URL . '/f/v1/images/vip2.gif' ?>"> cho tin</p>
                     </div>
                     <h5>HOẶC BẰNG SỐ DƯ TÀI KHOẢN</h5>
                     <div class="row border-detail form-control timeline-desk">
