--- a/module/Frontend/view/v1/frontend/content/detail.phtml
+++ b/module/Frontend/view/v1/frontend/content/detail.phtml
@@ -160,9 +160,9 @@
                         <div class="col-md-6 col-xs-6">
                             <div class="fb-like" data-href="<?php echo $this->serverUrl() . $this->Url('view-content', ['contentSlug' => $this->arrContent['cont_slug'], 'contentId' => $this->arrContent['cont_id']]) ?>" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
                         </div>
-<!--                        <div class="col-md-6 col-xs-6">
-                            <div class="g-plusone" data-annotation="inline" data-width="300" data-href="https://plus.google.com/102479865548966763788"></div>
-                        </div>-->
+                        <!--                        <div class="col-md-6 col-xs-6">
+                                                    <div class="g-plusone" data-annotation="inline" data-width="300" data-href="https://plus.google.com/102479865548966763788"></div>
+                                                </div>-->
                     </div>
                     <div class="tags">
                         <i class="fa fa-tags"></i>
@@ -409,12 +409,13 @@ if (empty($this->arrContent['user_created'])):
                         <p><b style="color: red">QN247 SVIP RV<?php echo sprintf("%04d", $this->arrContent['cont_id']); ?></b> gửi <b style="color: red">7650</b> để mua <b style="color: red">2 </b> ngày <img src="<?php echo STATIC_URL . '/f/v1/images/s-vip.gif'; ?>"> cho tin</p>
                         <p><b style="color: red">QN247 SVIP RV<?php echo sprintf("%04d", $this->arrContent['cont_id']); ?></b> gửi <b style="color: red">7750</b> để mua <b style="color: red">3</b> ngày <img src="<?php echo STATIC_URL . '/f/v1/images/s-vip.gif'; ?>"> cho tin</p>
                         <p style="color: blue">Hoặc nhắn tin theo cú pháp : </p> 
-                        <p><b style="color: red">QN247 VIP RV<?php echo sprintf("%04d", $this->arrContent['cont_id']); ?></b> gửi <b style="color: red">7650</b> để mua <b style="color: red">5 </b> ngày <img src="<?php echo STATIC_URL . '/f/v1/images/vip2.gif' ?>"> cho tin</p>
-                        <p><b style="color: red">QN247 VIP RV<?php echo sprintf("%04d", $this->arrContent['cont_id']); ?></b> gửi <b style="color: red">7750</b> để mua <b style="color: red">8</b> ngày <img src="<?php echo STATIC_URL . '/f/v1/images/vip2.gif' ?>"> cho tin</p>
+                        <p><b style="color: red">QN247 VIP RV<?php echo sprintf("%04d", $this->arrContent['cont_id']); ?></b> gửi <b style="color: red">7650</b> để mua <b style="color: red">5 </b> ngày <img src="<?php echo STATIC_URL . '/f/v1/images/vip2.gif'; ?>"> cho tin</p>
+                        <p><b style="color: red">QN247 VIP RV<?php echo sprintf("%04d", $this->arrContent['cont_id']); ?></b> gửi <b style="color: red">7750</b> để mua <b style="color: red">8</b> ngày <img src="<?php echo STATIC_URL . '/f/v1/images/vip2.gif'; ?>"> cho tin</p>
                     </div>
                     <h5>HOẶC BẰNG SỐ DƯ TÀI KHOẢN</h5>
                     <div class="row border-detail form-control timeline-desk">
-                        <p style="color: blue">Bạn có thể nhắn tin theo cú pháp : </p> 
+                        <p><img src="<?php echo STATIC_URL . '/f/v1/images/s-vip.gif'; ?>">  = 5000đ/Ngày <img src="<?php echo STATIC_URL . '/f/v1/images/vip2.gif'; ?>" = 2000đ/Ngày></p>
+                        <p style="color: blue"></p> 
                         <p><b style="color: red">QN247 RV<?php echo sprintf("%04d", $this->arrContent['cont_id']); ?></b> gửi <b style="color: red">7650</b> để mua <b style="color: red">5 </b> ngày víp cho tin</p>
                         <p><b style="color: red">QN247 RV<?php echo sprintf("%04d", $this->arrContent['cont_id']); ?></b> gửi <b style="color: red">7750</b> để mua <b style="color: red">8</b> ngày víp cho tin</p>
                     </div>
