--- a/module/Frontend/view/v1/frontend/content/detail.phtml
+++ b/module/Frontend/view/v1/frontend/content/detail.phtml
@@ -416,16 +416,16 @@ if (empty($this->arrContent['user_created'])):
                     <div class="row border-detail form-control timeline-desk">
                         <p><img src="<?php echo STATIC_URL . '/f/v1/images/s-vip.gif'; ?>">  = 5000đ/Ngày <b style="color: red"> Hoặc </b> <img src="<?php echo STATIC_URL . '/f/v1/images/vip2.gif'; ?>"> = 2000đ/Ngày</p>
                         <div class="col">
-                            Chọn Loại Víp
+                            <p>Chọn Loại Víp</p>
                             <input class="radio" type="radio" value="svip" name="typevip"><img src="<?php echo STATIC_URL . '/f/v1/images/s-vip.gif'; ?>">
                             <input class="radio" type="radio" value="vip" name="typevip"><img src="<?php echo STATIC_URL . '/f/v1/images/vip2.gif'; ?>">
                         </div>
                         <div class="col">
-                            Nhập số ngày muốn mua
                             <div class="col-md-6">
+                                <p>Nhập số ngày muốn mua</p>
                                 <input type="number" class="form-control input-sm" name="numdate">
                             </div>
-                            
+
                         </div>
                     </div>
                 </div>
