--- a/module/Frontend/view/v1/frontend/content/detail.phtml
+++ b/module/Frontend/view/v1/frontend/content/detail.phtml
@@ -414,15 +414,15 @@ if (empty($this->arrContent['user_created'])):
                     </div>
                     <h5>HOẶC BẰNG SỐ DƯ TÀI KHOẢN</h5>
                     <div class="row border-detail form-control timeline-desk">
-                        <p><img src="<?php echo STATIC_URL . '/f/v1/images/s-vip.gif'; ?>">  = 5000đ/Ngày <b style="color: red"> Hoặc </b> <img src="<?php echo STATIC_URL . '/f/v1/images/vip2.gif'; ?>"> = 2000đ/Ngày</p>
+                        <div
+                            <p><img src="<?php echo STATIC_URL . '/f/v1/images/s-vip.gif'; ?>">  = 5000đ/Ngày <b style="color: red"> Hoặc </b> <img src="<?php echo STATIC_URL . '/f/v1/images/vip2.gif'; ?>"> = 2000đ/Ngày</p>
+                        </div>
                         <div class="col margin-control">
                             <div class="col-md-6">
                                 <p>Chọn Loại Víp</p>
                                 <input class="radio" type="radio" value="svip" name="typevip"><img src="<?php echo STATIC_URL . '/f/v1/images/s-vip.gif'; ?>">
                                 <input class="radio" type="radio" value="vip" name="typevip"><img src="<?php echo STATIC_URL . '/f/v1/images/vip2.gif'; ?>">
                             </div>
-                        </div>
-                        <div class="col margin-control">
                             <div class="col-md-6">
                                 <p>Nhập số ngày muốn mua</p>
                                 <input type="number" class="form-control input-sm" name="numdate">
