--- a/module/Frontend/view/v1/frontend/content/detail.phtml
+++ b/module/Frontend/view/v1/frontend/content/detail.phtml
@@ -418,16 +418,16 @@ if (empty($this->arrContent['user_created'])):
                     <h5>HOẶC BẰNG SỐ DƯ TÀI KHOẢN</h5>
                     <div class="row border-detail form-control timeline-desk">
                         <div class="col" style="margin: 5px 0px 5px 0">
-                            <p><img src="<?php echo STATIC_URL . '/f/v1/images/s-vip.gif'; ?>">  = 5000đ/Ngày <b style="color: red"> Hoặc </b> <img src="<?php echo STATIC_URL . '/f/v1/images/vip2.gif'; ?>"> = 2000đ/Ngày</p>
+                            <p><img src="<?php echo STATIC_URL . '/f/v1/images/s-vip.gif'; ?>">  <b class="color-blue">= 5000đ/Ngày</b> <b style="color: red"> Hoặc </b> <img src="<?php echo STATIC_URL . '/f/v1/images/vip2.gif'; ?>"> <b class="color-blue">= 2000đ/Ngày</b></p>
                         </div>
                         <div class="col">
                             <div class="col-md-4">
-                                <p  style="margin-bottom: 5px">Chọn Loại Víp</p>
+                                <p  style="margin-bottom: 5px; color: blue">Chọn Loại Víp</p>
                                 <input class="radio" type="radio" value="svip" name="typevip"><img src="<?php echo STATIC_URL . '/f/v1/images/s-vip.gif'; ?>">
                                 <input class="radio" type="radio" value="vip" name="typevip"><img src="<?php echo STATIC_URL . '/f/v1/images/vip2.gif'; ?>">
                             </div>
                             <div class="col-md-4">
-                                <p  style="margin-bottom: 5px">Nhập số ngày muốn mua</p>
+                                <p  style="margin-bottom: 5px; color: blue">Nhập số ngày muốn mua</p>
                                 <input type="number" class="form-control input-sm" name="numdate">
                             </div>
                             <div class="col-md-4">
