--- a/module/Frontend/view/v1/frontend/content/detail.phtml
+++ b/module/Frontend/view/v1/frontend/content/detail.phtml
@@ -427,17 +427,17 @@ if (empty($this->arrContent['user_created'])):
                                 <input class="radio" type="radio" value="vip" name="typevip"><img src="<?php echo STATIC_URL . '/f/v1/images/vip2.gif'; ?>">
                             </div>
                             <div class="col-md-4">
-                                <p  style="margin-bottom: 5px; color: blue">Nhập số ngày muốn mua</p>
+                                <p  style="margin-bottom: 5px; color: blue">Số ngày</p>
                                 <input type="number" class="form-control input-sm" name="numdate">
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-4 mg-t-18">
                                 <button class="btn btn-success" name="deal-vip">Mua</button>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Đóng</button>
                 </div>
             </div>
         </div>
