--- a/module/Frontend/view/v1/frontend/content/detail.phtml
+++ b/module/Frontend/view/v1/frontend/content/detail.phtml
@@ -418,7 +418,7 @@ if (empty($this->arrContent['user_created'])):
                     <h5>HOẶC BẰNG SỐ DƯ TÀI KHOẢN</h5>
                     <div class="row border-detail form-control timeline-desk">
                         <div class="col" style="margin: 5px 0px 10px 0">
-                            <p>Số dư còn lại trong tài khoản hiện tại của bạn là : <?php echo CUSTOMER_BALANCE; ?> đ</p>
+                            <p><b>Số dư còn lại trong tài khoản hiện tại của bạn là : <?php echo CUSTOMER_BALANCE; ?> đ</b></p>
                         </div>
                         <div class="col" style="margin: 5px 0px 10px 0">
                             <p><img src="<?php echo STATIC_URL . '/f/v1/images/s-vip.gif'; ?>">  <b class="color-blue">= 5000đ/Ngày</b> <b style="color: red"> Hoặc </b> <img src="<?php echo STATIC_URL . '/f/v1/images/vip2.gif'; ?>"> <b class="color-blue">= 2000đ/Ngày</b></p>
