--- a/module/Frontend/view/v1/frontend/content/detail.phtml
+++ b/module/Frontend/view/v1/frontend/content/detail.phtml
@@ -431,7 +431,7 @@ if (empty($this->arrContent['user_created'])):
                             </div>
                             <div class="col-md-4">
                                 <p  style="margin-bottom: 5px; color: blue">Số ngày</p>
-                                <input type="number" class="form-control input-sm" name="numdate">
+                                <input type="number" class="form-control input-sm" name="numdate" min="1">
                             </div>
                             <div class="col-md-4 mg-t-18">
                                 <button class="btn btn-success" name="deal-vip">Mua</button>
