--- a/module/Frontend/view/v1/frontend/content/detail.phtml
+++ b/module/Frontend/view/v1/frontend/content/detail.phtml
@@ -426,7 +426,7 @@ if (empty($this->arrContent['user_created'])):
                         <div class="col">
                             <div class="col-md-4">
                                 <p  style="margin-bottom: 5px; color: blue">Chọn Loại Víp</p>
-                                <input class="radio" type="radio" value="svip" name="typevip"><img src="<?php echo STATIC_URL . '/f/v1/images/s-vip.gif'; ?>">
+                                <input class="radio" type="radio" value="svip" name="typevip" checked><img src="<?php echo STATIC_URL . '/f/v1/images/s-vip.gif'; ?>">
                                 <input class="radio" type="radio" value="vip" name="typevip"><img src="<?php echo STATIC_URL . '/f/v1/images/vip2.gif'; ?>">
                             </div>
                             <div class="col-md-4">
