--- a/module/Frontend/view/v1/layout/footer.phtml
+++ b/module/Frontend/view/v1/layout/footer.phtml
@@ -44,6 +44,30 @@
                     </div>
                 </div>
             </div>
+            <div id="footer-bottom">
+                <div class="row row-eq-height">
+                    <div class="col-xs-2 img-dkbct">
+                        <?php echo Phalcon\Tag::image(array("frontend/images/img-dkct.png", "alt" => "")); ?>
+                    </div>
+                    <div class="col-xs-7 padding-0">
+                        <div class="adrest-ftbt">
+                            <div class="title">CÔNG TY TNHH NHADAT.NET</div>
+                            <ul class="list-unstyled">
+                                <li>Trụ sở chính: 136 – 138 Cô Bắc, Phường Cô Giang, Quận 1,  Thành Phố  Hồ Chí Minh</li>
+                                <li>Điện thoại: (+84 8) 38 181 181 - Email: cskh@nhadat.net</li>
+                                <li>MSDN: 0106459932 do Sở Kế hoạch và Đầu tư TP. Hồ Chí Minh cấp lần đầu ngày 19/02/2014.</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-xs-3 padding-left0">
+                        <ul class="list-unstyled text-right copyright-ft">
+                            <li>Copyright ©2015 by Nhadat.net</li>
+                            <li>All rights reserved</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            
             <div class="row">
                 <div class="col-md-12">
                     <div class="copyright text-center">
