--- a/module/Frontend/view/v1/layout/footer.phtml
+++ b/module/Frontend/view/v1/layout/footer.phtml
@@ -57,6 +57,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="col-xs-2">
+                        <img src="<?php echo STATIC_URL . '/f/v1/images/img-dkct.png'; ?>">
                         <?php // echo Phalcon\Tag::image(array("frontend/images/img-dkct.png", "alt" => "")); ?>
                     </div>
                     <div class="col-xs-7 padding-0">
