--- a/module/Frontend/view/v1/layout/footer.phtml
+++ b/module/Frontend/view/v1/layout/footer.phtml
@@ -55,7 +55,7 @@
 
 
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-12" style="color: #505050">
                     <div class="col-xs-2">
                         <img src="<?php echo STATIC_URL . '/f/v1/images/img-dkct.png'; ?>">
                         <?php // echo Phalcon\Tag::image(array("frontend/images/img-dkct.png", "alt" => "")); ?>
