--- a/module/Frontend/view/v1/layout/footer.phtml
+++ b/module/Frontend/view/v1/layout/footer.phtml
@@ -62,17 +62,17 @@
                     </div>
                     <div class="col-xs-7 padding-0">
                         <div class="adrest-ftbt">
-                            <div class="title">CÔNG TY TNHH NHADAT.NET</div>
+                            <div class="title">CÔNG TY TNHH BESTQUYNHON.COM</div>
                             <ul class="list-unstyled">
-                                <li>Trụ sở chính: 136 – 138 Cô Bắc, Phường Cô Giang, Quận 1,  Thành Phố  Hồ Chí Minh</li>
-                                <li>Điện thoại: (+84 8) 38 181 181 - Email: cskh@nhadat.net</li>
-                                <li>MSDN: 0106459932 do Sở Kế hoạch và Đầu tư TP. Hồ Chí Minh cấp lần đầu ngày 19/02/2014.</li>
+                                <li>Trụ sở chính: 111 – 113 Nguyễn Huệ, Tp.Quy Nhơn, Tỉnh Bình Định</li>
+                                <li>Điện thoại: 0979 57 57 93 - Email: cskh@bestquynhon.com</li>
+                                <!--<li>MSDN: 0106459932 do Sở Kế hoạch và Đầu tư TP. Hồ Chí Minh cấp lần đầu ngày 19/02/2014.</li>-->
                             </ul>
                         </div>
                     </div>
                     <div class="col-xs-3 padding-left0">
                         <ul class="list-unstyled text-right copyright-ft">
-                            <li>Copyright ©2015 by Nhadat.net</li>
+                            <li>Copyright ©2016 by <a href="<?php echo $this->serverUrl() . $this->Url('home') ?>">Bestquynhon.com</a></li>
                             <li>All rights reserved</li>
                         </ul>
                     </div>
