--- a/module/Frontend/view/v1/layout/footer.phtml
+++ b/module/Frontend/view/v1/layout/footer.phtml
@@ -46,15 +46,6 @@
             </div>
 
             <div class="row">
-                <div class="col-md-12">
-                    <div class="copyright text-center">
-                        <p>@ All Copyrights Reseverd 2016 - Design & Development by <a class="col" href="<?php echo $this->serverUrl(); ?>">bestquynhon.com</a></p>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="row">
                 <div class="col-md-12" style="color: #505050">
                     <div class="col-xs-2">
                         <img src="<?php echo STATIC_URL . '/f/v1/images/img-dkct.png'; ?>">
@@ -73,7 +64,7 @@
                     <div class="col-xs-3 padding-left0">
                         <ul class="list-unstyled text-right copyright-ft">
                             <li>Copyright ©2016 by <a href="<?php echo $this->serverUrl() . $this->Url('home') ?>">Bestquynhon.com</a></li>
-                            <li>All rights reserved</li>
+                            <li>All rights reserved - Design & Development</li>
                         </ul>
                     </div>
                 </div>
