--- a/module/Frontend/view/v1/layout/footer.phtml
+++ b/module/Frontend/view/v1/layout/footer.phtml
@@ -47,11 +47,11 @@
 
             <div class="row">
                 <div class="col-md-12" style="color: #505050">
-                    <div class="col-md-2 col-xs-6">
+                    <div class="col-md-2 col-sm-6">
                         <img src="<?php echo STATIC_URL . '/f/v1/images/img-dkct.png'; ?>">
                         <?php // echo Phalcon\Tag::image(array("frontend/images/img-dkct.png", "alt" => "")); ?>
                     </div>
-                    <div class="col-md-7 col-xs-6">
+                    <div class="col-md-7 col-sm-6">
                         <div class="adrest-ftbt">
                             <div class="title">CÔNG TY TNHH BESTQUYNHON.COM</div>
                             <ul class="list-unstyled">
@@ -61,7 +61,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-md-3 col-xs-6">
+                    <div class="col-md-3 col-sm-6">
                         <ul class="list-unstyled text-right copyright-ft">
                             <li>Copyright ©2016 by <a href="<?php echo $this->serverUrl() . $this->Url('home') ?>">Bestquynhon.com</a></li>
                             <li>All rights reserved - Design & Development</li>
