--- a/module/Frontend/view/v1/layout/footer.phtml
+++ b/module/Frontend/view/v1/layout/footer.phtml
@@ -26,7 +26,7 @@
                         <h4>VỀ BESTQUYNHON.COM</h4>
                         <a href="#"><i class="fa fa-arrow-right"></i> Giới thiệu về Bestquynhon.com</a><br/>
                         <a href="#"><i class="fa fa-arrow-right"></i> Hotline : 0979 57 57 93</a> (Tâm đẹp trai)<br/>
-                        <a href="#"><i class="fa fa-envelope-o"></i> <?php echo My\General::EMAIL_SUPPORT; ?></a><br/>
+                        <a href="mailto:<?php echo My\General::EMAIL_SUPPORT; ?>"><i class="fa fa-envelope-o"></i> <?php echo My\General::EMAIL_SUPPORT; ?></a><br/>
                         <a rel="nofollow" href="skype:ngocchien01?chat"><i class="fa fa-skype"></i> Bestquynhon.com</a><br/>
                         <a href="#"><i class="fa fa-arrow-right"></i> Hợp tác & liên kết</a><br/>
                     </div>
