--- a/module/Frontend/view/v1/frontend/user/index.phtml
+++ b/module/Frontend/view/v1/frontend/user/index.phtml
@@ -1,6 +1,6 @@
 <?php
 $arrDetailUser = $this->arrDetailUser;
-$avatar = empty($arrDetailUser['user_avatar']) ? STATIC_URL . '/f/v1/images/no_avatar_male.jpg' : json_decode($arrDetailUser['user_avatar'],true)[0]['thumbImage']['150x150'];
+$avatar = empty($arrDetailUser['user_avatar']) ? STATIC_URL . '/f/v1/images/no_avatar_male.jpg' : json_decode($arrDetailUser['user_avatar'], true)[0]['thumbImage']['150x150'];
 ?>
 <section id="page-head">
     <div class="container">
@@ -66,6 +66,8 @@ $avatar = empty($arrDetailUser['user_avatar']) ? STATIC_URL . '/f/v1/images/no_a
                                                         <div class="col-md-7 form-group"><?php echo $arrDetailUser['user_email']; ?></div>
                                                         <div class="col-md-5 form-group"><b>Số điện thoại</b></div>
                                                         <div class="col-md-7 form-group"><?php echo $arrDetailUser['user_phone']; ?></div>
+                                                        <div class="col-md-5 form-group"><b>Số dư</b></div>
+                                                        <div class="col-md-7 form-group"><b class="color-red"><?php echo number_format($arrDetailUser['user_balance'],0,",","."); ?> đ</b></div>
                                                     </div>
                                                 </div>
                                                 <div class="row">
